<resources>
    <string name="app_name">Fyxio</string>

    <string name="btn_next_exc">Volgende oefening</string>

    <string name="btn_start_exc">Start oefeningen</string>

    <string name="last_exc">Laatste oefening</string>

    <string name="btn_back_hoofdmenu">Hoofdmenu</string>

    <string name="btn_back_overzicht">Overzicht oefeningen</string>

    <string name="action_settings">Reminder instellen</string>

    <string name="ondertitel">Werk aan uw herstel met de Fyxio app!
    Binnen deze app kunt u meerdere oefeningen vinden in de vorm van video\'s.
        In de video\'s wordt uitgelegd hoe u de oefeningen behoort uit te voeren en kunt u
        tegelijkertijd meedoen.
        \n \n Bij elke vorm van twijfel over pijn of ongemakkelijkheid aarzel dan niet om uw arts te raadplegen.
    \n \n Wij wensen u veel succes met uw revalidatie!</string>

    <string name="btn_repeat_exc">Herhaal buikoefening</string>
    <string name="btn_repeat_exc1">Herhaal rugoefening</string>
    <string name="btn_repeat_exc2">Herhaal enkeloefening (1)</string>
    <string name="btn_repeat_exc3">Herhaal beenoefening</string>
    <string name="btn_repeat_exc4">Herhaal enkeloefening (2)</string>

    <string name="error_player">%Oeps! er is iets fout gegaan. Controleer uw internetverbinding%</string>

    <string name="next_txt">Next</string>
    <string name="back_txt">Back</string>
    <string name="info_video1">Rug oefening</string>
    <string name="info_video2">Enkel oefening</string>
    <string name="info_video3">Been oefening</string>
    <string name="info_video4">Enkel oefening</string>
    <string name="info_video5">Overzicht</string>

    <string name="info_ex1">Binnen deze oefening gaan we uw buikspieren aansterken.
        Het is namelijk belangrijk dat ook uw rug en buik aan te sterken om opnieuw te kunnen balanceren op twee benen.
    U kunt voor deze oefening het beste plat liggen op de grond. \n \n
        Voer de volgende stappen uit: \n
    1. Trek uw buik iets in en leg uw vingers achter uw oren met uw ellebogen naar buiten. \n
    2. Adem uit en kom iets omhoog met uw neus richting het plafond. \n
    3. Adem in en ga rustig terug naar de grond. \n
    4. Herhaal deze oefening 10 keer. \n \n
    U bent nu klaar met deze oefening en u kunt doorgaan naar de volgende pagina! \n \n</string>

    <string name="info_ex2">Binnen deze oefening versterken we met vier verschillende oefeningen uw rugspieren. U kunt voor deze oefening het beste
        met uw buik op de grond liggen. \n \n
    Oefening 1 - Voer de volgende stappen uit: \n
    1. Lig ontspannen op de grond, trek uw navel iets in. Houd binnen deze oefening rekening dat uw benen ontspannen
        op de grond liggen. \n
    2. Kom omhoog van de grond terwijl u inademt.  \n
    3. Op de uitademing gaat u weer langzaam naar beneden. \n
    4. Herhaal deze oefening 5 keer. \n \n

    Oefening 2 - Voer de volgende stappen uit: \n
        1. Controleer of uw navel goed ingetrokken is en dat de benen ontspannen op de grond liggen. \n
        2. Plaats uw vingers achter uw oren en uw ellebogen naar buiten. \n
        3. Kom omhoog van de grond terwijl u inademt. \n
        4. Op de uitademing komt u weer langzaam naar beneden. \n
        5. Herhaal deze oefening 5 keer. \n \n

    Oefening 3 - Voer de volgende stappen uit: \n
        1. Controleer weer of uw navel goed ingetrokken is en dat uw benen ontspannen op de grond liggen. \n
        2. Plaats uw vinger achter uw oren en uw ellebogen naar buiten. \n
        3. Kom schuin omhoog naar de rechterkant op de inademing. \n
        4. Op de uitademing komt u weer langzaam naar beneden. \n
        5. Kom deze keer schuin omhoog naar de linkerkant op de inademing. \n
        6. Op de uitademing komt u weer langzaam naar beneden. \n
        7. Herhaal deze oefening 5 keer. \n \n

    Oefening 4 - Voer de volgende stappen uit: \n
        1. Trek uw navel in en zorg dat uw bovenlichaam ontspannen is.
        U kunt hierbij het beste uw hoofd op uw armen plaatsen. \n
        2. Zorg ervoor dat de knieën gestrekt zijn. \n
        3. Lift de gestrekte knieën omhoog van de grond af. \n
        4. Herhaal deze oefening 5 keer. \n \n
    U bent nu klaar met deze oefeningen en u kunt doorgaan naar de volgende pagina! \n \n</string>

    <string name="info_ex3">Binnen deze oefening gaan we de enkel op en neer bewegen.
    U kunt hiervoor het beste zitten op bed of op een bank, waardoor uw benen plat liggen. \n \n
    Voer de volgende stappen uit: \n
    1. Beweeg uw tenen en uw enkel naar u toe. \n
    2. Beweeg uw tenen en uw enkel van u af. \n
    3. Herhaal deze beweging 10 keer. \n \n
    U bent nu klaar met deze oefening en u kunt doorgaan naar de volgende pagina! \n \n</string>

    <string name="info_ex4">Binnen deze oefening gaan we het been strekken naar achteren.
    U kunt hiervoor het beste steunen op een stevige stoel, tafel of hoge bedrand voor extra balans. \n \n
    Voer de volgende stappen uit: \n
    1. Ga goed op twee benen staan en houd u vast aan de stoel. \n
    2. Beweeg één been gestrekt naar achteren en blijf goed op het andere been staan.
        Zorg ervoor dat u met uw tenen de grond raakt, niet met de gehele voet. \n
    3. Herhaal deze beweging met elk been 10 keer. \n \n
    U bent nu klaar met deze oefening en u kunt doorgaan naar de volgende pagina! \n \n</string>

    <string name="info_ex5">Binnen deze oefening gaan we de enkel opnieuw op en neer bewegen.
    U kunt hiervoor het beste op een stoel gaan zitten met uw voeten rustend op de grond. \n \n
    Voer de volgende stappen uit: \n
    1. Beweeg uw tenen en uw enkel naar u toe, waardoor uw tenen de lucht in wijzen. \n
    2. Beweeg uw tenen en uw enkel van u af, waardoor uw tenen op de grond blijven en
        uw enkel van de grond af komt. \n
    3. Herhaal deze beweging 10 keer. \n \n
    U bent nu klaar met de oefeningen voor vandaag, goed gedaan! \n \n</string>

    <string name="info_overview">Het is belangrijk om de oefeningen dagelijks te herhalen.
        Kies uit één van onderstaande oefeningen om deze nogmaals te herhalen:\n
    </string>

    <string name="vordering">Vordering van uw oefeningen:</string>

</resources>
