<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/footer"
        android:background="@color/colorBackground"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_overview"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="17dp"
                android:layout_below="@+id/youtube_player_fragment"
                android:layout_alignStart="@+id/youtube_player_fragment"
                android:id="@+id/textView3" />

            <Button
                android:id="@+id/btn_start_repeat_ex"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@android:color/white"
                android:background="@drawable/rouned_corner_shadow"
                android:text="@string/btn_repeat_exc"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="56dp" />

            <Button
                android:id="@+id/btn_start_repeat_ex1"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@android:color/white"
                android:background="@drawable/rouned_corner_shadow"
                android:text="@string/btn_repeat_exc1"
                android:layout_centerVertical="true"
                android:layout_alignStart="@+id/btn_start_repeat_ex" />

            <Button
                android:id="@+id/btn_start_repeat_ex2"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@android:color/white"
                android:background="@drawable/rouned_corner_shadow"
                android:text="@string/btn_repeat_exc2"
                android:layout_below="@+id/btn_start_repeat_ex1"
                android:layout_alignStart="@+id/btn_start_repeat_ex1"
                android:layout_marginTop="14dp" />

            <Button
                android:id="@+id/btn_start_repeat_ex3"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@android:color/white"
                android:background="@drawable/rouned_corner_shadow"
                android:text="@string/btn_repeat_exc3"
                android:layout_below="@+id/btn_start_repeat_ex2"
                android:layout_alignStart="@+id/btn_start_repeat_ex2"
                android:layout_marginTop="14dp" />

            <Button
                android:id="@+id/btn_start_repeat_ex4"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@android:color/white"
                android:background="@drawable/rouned_corner_shadow"
                android:text="@string/btn_repeat_exc4"
                android:layout_below="@+id/btn_start_repeat_ex3"
                android:layout_alignStart="@+id/btn_start_repeat_ex3"
                android:layout_marginTop="14dp" />



        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_txt"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="32dp"
            android:alpha="0.8"
            android:layout_alignParentEnd="true" />


        <TextView
            android:id="@+id/vid_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="55dp"
            android:text="@string/btn_back_hoofdmenu"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/next_btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingLeft="200dp"
            android:paddingBottom="50dp"
            android:paddingTop="50dp"
            android:layout_marginTop="40dp"
            android:src="@mipmap/ic_arrow_forward_white"
            android:background="@android:color/transparent"/>
    </RelativeLayout>

</RelativeLayout>