<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">


<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ipmedt4.example.com.fyxio.MainActivity"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />


    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">


    </LinearLayout>

    <TextView
        android:id="@+id/textViewTitel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textViewOndertitel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:gravity="center"
        android:text="@string/ondertitel"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_start_ex"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:textColor="@android:color/white"
        android:background="@drawable/rouned_corner_shadow"
        android:text="@string/btn_start_exc" />


</android.support.design.widget.CoordinatorLayout>

    </RelativeLayout>
